...
class _HomeScreenState extends State<HomeScreen> {
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Colors.grey.shade900,
      floatingActionButton: FloatingActionButton(
        key: const ValueKey('addButton'),
        onPressed: () {
          Navigator.push<NewIdeaScreen>(
            context,
            MaterialPageRoute(
              builder: (_) => ChangeNotifierProvider.value(
                value: Provider.of<IdeasModel>(context),
...
          );
        },
        child: const Icon(Icons.add),
        backgroundColor: Colors.green.shade800,
      ),
      appBar: AppBar(
        key: const Key('AppBarHome'),
        title: const Text('Ideas'),
        backgroundColor: Colors.green.shade900,
        actions: [
          IconButton(
            key: const ValueKey('LogoutKey'),
            onPressed: () {
...
